WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301472
[macOS] facebook.com: Unable to drag and drop images (from Photos, Finder) into new album
https://bugs.webkit.org/show_bug.cgi?id=301472
Summary
[macOS] facebook.com: Unable to drag and drop images (from Photos, Finder) in...
Wenson Hsieh
Reported
2025-10-25 15:17:40 PDT
rdar://150848219
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-10-25 15:51:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52999
EWS
Comment 2
2025-10-25 21:41:47 PDT
Committed
302156@main
(ddcd91a27bd8): <
https://commits.webkit.org/302156@main
> Reviewed commits have been landed. Closing PR #52999 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug