Source/WebCore/dom/DataTransferItem.cpp
@@ -45,9 +45,9 @@
 
 namespace WebCore {
 
-Ref<DataTransferItem> DataTransferItem::create(WeakPtr<DataTransferItemList>&& list, const String& type)
+Ref<DataTransferItem> DataTransferItem::create(WeakPtr<DataTransferItemList>&& list, const String& type, Kind kind)
 {
-    return adoptRef(*new DataTransferItem(WTFMove(list), type));
+    return adoptRef(*new DataTransferItem(WTFMove(list), type, kind));
 }
 
 Ref<DataTransferItem> DataTransferItem::create(WeakPtr<DataTransferItemList>&& list, const String& type, Ref<File>&& file)
@@ -55,15 +55,17 @@ Ref<DataTransferItem> DataTransferItem::create(WeakPtr<DataTransferItemList>&& l
     return adoptRef(*new DataTransferItem(WTFMove(list), type, WTFMove(file)));
 }
 
-DataTransferItem::DataTransferItem(WeakPtr<DataTransferItemList>&& list, const String& type)
+DataTransferItem::DataTransferItem(WeakPtr<DataTransferItemList>&& list, const String& type, Kind kind)
     : m_list(WTFMove(list))
     , m_type(type)
+    , m_kind(kind)
 {
 }
 
 DataTransferItem::DataTransferItem(WeakPtr<DataTransferItemList>&& list, const String& type, Ref<File>&& file)
     : m_list(WTFMove(list))
     , m_type(type)
+    , m_kind(Kind::File)
     , m_file(WTFMove(file))
 {
 }
@@ -75,9 +77,21 @@ void DataTransferItem::clearListAndPutIntoDisabledMode()
     m_list.clear();
 }
 
+bool DataTransferItem::isFile() const
+{
+    return m_kind == Kind::File;
+}
+
 String DataTransferItem::kind() const
 {
-    return m_file ? "file"_s : "string"_s;
+    switch (m_kind) {
+    case Kind::String:
+        return "string"_s;
+    case Kind::File:
+        return "file"_s;
+    }
+    ASSERT_NOT_REACHED();
+    return { };
 }
 
 String DataTransferItem::type() const
